<resources>
    <string name="app_name">SchoolDatabaseApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_classname">Edit class name</string>
    <string name="edit_classnumber">Edit class number</string>
    <string name="edit_classfloor">Edit floor</string>
    <string name="save">Save</string>
    <string name="add_students">Add students</string>
    <string name="edit_first_name">Edit first name</string>
    <string name="edit_last_name">Edit last name</string>
    <string name="edit_age">Edit age</string>
    <string name="search_title">Search By</string>
    <string name="add_student">add student</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="search_category">
        <item>Students</item>
        <item>Classrooms</item>
    </string-array>

</resources>