<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".addStudents.AddStudentFragment">

    <EditText
        android:id="@+id/edit_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_first_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_last_name"
        android:inputType="text" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_age"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_age"
            android:inputType="number" />

        <Spinner
            android:id="@+id/spinnerAge"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/gender"
            android:layout_marginStart="10dp" />
    </LinearLayout>

<Button
    android:id="@+id/save_Student_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="200dp"
    android:layout_gravity="center"
    android:text="@string/save"
    >

</Button>


</LinearLayout>

